draw card incl animation

--- a/src/app/startscreen/startscreen.component.html
+++ b/src/app/startscreen/startscreen.component.html
@@ -1,6 +1,6 @@
 <div class="start-screen">
-
-    <div>RING OF FIRE</div>
+    <div class="titlecontainer"><div>RING OF FIRE</div><img src="/assets/img/title-cards.png" alt=""></div>
+    
     <button (click)="newGame()">START GAME</button>
 
 </div>
