--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -27,6 +27,11 @@
     }
 }
 
+.played-card {
+    transform: scale(1.3) translateX(140px) translateY(-180px) rotate(-10deg);
+    right: 25px;
+}
+
 .pick-card {
     transition: all 125ms ease-in-out;
     // transform: scale(1.5) !important;
