material design button

--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,3 +1,6 @@
+<app-player *ngFor="let player of game.players; let i = index;" [ngStyle]="{'top.px': 100 + (i * 125)}" 
+[name] = "player" class="player-position"></app-player>
+
 <div class="field">
     <div class="card-stack">
        <!-- Card stack -->
@@ -9,3 +12,7 @@
         <img (click)="takeCard()" *ngIf="pickCardAnimation" class="pick-card" style="right: 25px" src="/assets/img/cards/{{ currentCard }}.png">
     </div>
 </div>
+
+<button mat-fab color="primary" class="btn-add">
+<mat-icon>add</mat-icon>
+</button>
