--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -34,7 +34,6 @@
 
 .pick-card {
     transition: all 125ms ease-in-out;
-    // transform: scale(1.5) !important;
     animation: pick-card-animation 1s ease-in-out;
     transform: scale(1.3) translateX(140px) translateY(-180px) rotate(-10deg);
 }
@@ -44,4 +43,15 @@
     40% {transform: scale(1.7);}
     60% {transform: scale(1.7);}
     100% {transform: scale(1.3) translateX(140px) translateY(-180px) rotate(-10deg);}
+}
+
+.player-position {
+position: absolute;
+right: 0;
+}
+
+.btn-add {
+    position: absolute;
+    right: 32px;
+    bottom: 32px
 }
