--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,18 +1,22 @@
-<app-player *ngFor="let player of game.players; let i = index;" [ngStyle]="{'top.px': 100 + (i * 125)}" 
-[name] = "player" class="player-position"></app-player>
+<app-player *ngFor="let player of game.players; let i = index;" [ngStyle]="{'top.px': 100 + (i * 90)}" 
+[playerActive]="i == game.currentPlayer" [name]="player" class="player-position"></app-player>
 
 <div class="field">
     <div class="card-stack">
-       <!-- Card stack -->
-        <img *ngFor="let card of [0,1,2,3]; let i = index;" [ngStyle]="{'right.px': i * 5}" src="/assets/img/cards/card_cover.png">
+        <!-- Card stack -->
+        <img *ngFor="let card of [0,1,2,3]; let i = index;" [ngStyle]="{'right.px': i * 5}"
+            src="/assets/img/cards/card_cover.png">
         <img (click)="takeCard()" class="top-card" style="right: 25px" src="/assets/img/cards/card_cover.png">
         <!-- Stack for played cards -->
         <img *ngFor="let card of game.playedCards" class="played-card" src="/assets/img/cards/{{ card }}.png">
         <!-- Current card (animation) -->
-        <img (click)="takeCard()" *ngIf="pickCardAnimation" class="pick-card" style="right: 25px" src="/assets/img/cards/{{ currentCard }}.png">
+        <img (click)="takeCard()" *ngIf="pickCardAnimation" class="pick-card" style="right: 25px"
+            src="/assets/img/cards/{{ currentCard }}.png">
     </div>
 </div>
 
-<button mat-fab color="primary" class="btn-add">
-<mat-icon>add</mat-icon>
+<app-game-info [card]="currentCard" class="card-bottom"></app-game-info>
+
+<button mat-fab color="primary" (click)="openDialog()" class="btn-add">
+    <mat-icon>add</mat-icon>
 </button>
