--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -55,3 +55,10 @@ right: 0;
     right: 32px;
     bottom: 32px
 }
+
+.card-bottom {
+    position: absolute;
+    bottom: 32px;
+    left: 100px;
+    right: 100px;
+}
