--- a/src/app/startscreen/startscreen.component.html
+++ b/src/app/startscreen/startscreen.component.html
@@ -1,5 +1,5 @@
 <div class="start-screen">
-    <div class="titlecontainer"><div>RING OF FIRE</div><img src="/assets/img/title-cards.png" alt=""></div>
+    <div class="titlecontainer"><div>RING OF FIRE</div><img src="assets/img/title-cards.png" alt=""></div>
     
     <button (click)="newGame()">START GAME</button>
 
