--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,5 +1,4 @@
-<app-player *ngFor="let player of game.players; let i = index;" [ngStyle]="{'top.px': 100 + (i * 90)}" 
-[playerActive]="i == game.currentPlayer" [name]="player" class="player-position"></app-player>
+<app-player *ngFor="let player of game.players; let i = index;" [ngStyle]="{'top.px': 100 + (i * 90)}"[playerActive]="i == game.currentPlayer" [name]="player" class="player-position"></app-player>
 
 <div class="field" style="background-image: url('./assets/img/board.jpg');">
     <div class="card-stack">
