--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -27,21 +27,21 @@
 }
 
 .played-card {
-    transform: scale(1.3) translateX(140px) translateY(-180px) rotate(-10deg);
+    transform: scale(1.2) translateX(140px) translateY(-180px) rotate(-10deg);
     right: 25px;
 }
 
 .pick-card {
     transition: all 125ms ease-in-out;
     animation: pick-card-animation 1s ease-in-out;
-    transform: scale(1.3) translateX(140px) translateY(-180px) rotate(-10deg);
+    transform: scale(1.2) translateX(140px) translateY(-180px) rotate(-10deg);
 }
 
 @keyframes pick-card-animation {
     0% {transform: scale(1);}
     40% {transform: scale(1.7);}
     60% {transform: scale(1.7);}
-    100% {transform: scale(1.3) translateX(140px) translateY(-180px) rotate(-10deg);}
+    100% {transform: scale(1.2) translateX(140px) translateY(-180px) rotate(-10deg);}
 }
 
 .player-position {
@@ -53,7 +53,11 @@ z-index: 1;
 .btn-add {
     position: absolute;
     right: 32px;
-    bottom: 32px
+    bottom: 32px;
+
+    @media (max-width: 720px) {
+        bottom: 128px;
+    }
 }
 
 .card-bottom {
@@ -61,4 +65,25 @@ z-index: 1;
     bottom: 32px;
     left: 100px;
     right: 100px;
+
+    @media (max-width: 720px) {
+        width: 100%;
+        left: 0;
+        bottom: 0;
+        right: 0;
+    }
+}
+
+.scroll-container {
+    display: flex;
+position: absolute;
+left: 0;
+top: 0;
+right: 0;
+overflow-x: auto;
+overflow-y: hidden;
+
+  app-player-mobile{
+    margin-left: 8px;
+  }
 }
