--- a/src/app/startscreen/startscreen.component.scss
+++ b/src/app/startscreen/startscreen.component.scss
@@ -1,42 +1,63 @@
 .start-screen {
-    background-color: #161616;
-    width: 100vw;
-    height: 100vh;
-    max-width: 100%;
+  background-color: #161616;
+  width: 100vw;
+  height: 100vh;
+  max-width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  
+
+  .titlecontainer {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
+    @media (max-width: 960px) {
+        flex-direction: column;
+        justify-content: center;
+        width: 100%;
+      }
+  }
 
-    .titlecontainer {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-
-    div {
-        font-size: 128px;
-        font-weight: 800;
-        line-height: 130px;
-        color: rgb(255, 0, 0);
-        width: 50%;
-    }
-
-    button {
+  div {
+    font-size: 128px;
+    font-weight: 800;
+    line-height: 130px;
+    color: rgb(255, 0, 0);
+    width: 50%;
+    @media (max-width: 960px) {
         font-size: 64px;
-        width: 50%;
-        border-radius: 20px;
-        cursor: pointer;
+        line-height: 130%;
+        text-align: center
+      }
+  }
 
-        &:hover {
-            background-color: yellow;
-        }
+  }
+
+  button {
+    font-size: 64px;
+    width: 50%;
+    border-radius: 20px;
+    cursor: pointer;
+
+    &:hover {
+      background-color: yellow;
     }
 
-    img {
-        height: 100%;
-        width: 45%;
-        z-index: 2;
-        background-color: none;
+    @media (max-width: 960px) {
+    font-size: 32px;
+      width: 300px;
     }
-}
+  }
+
+  img {
+    height: 100%;
+    width: 45%;
+    z-index: 2;
+    background-color: none;
+
+    @media (max-width: 960px) {
+      overflow: hidden;
+    }
+  }
