--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -4,10 +4,10 @@
 <div class="scroll-container hide-desktop"
 >
     <app-player-mobile *ngFor="let player of game.players; let i = index;"
-        [playerActive]="i == game.currentPlayer" [name]="player"></app-player-mobile>
+        [playerActive]="i == game.currentPlayer" [name]="player" class="hide-desktop"></app-player-mobile>
 </div>
 
-<div class="field" style="background-image: url('./assets/img/board.jpg');">
+<div *ngIf="!gameOver" class="field" style="background-image: url('./assets/img/board.jpg');">
     <div class="card-stack">
         <!-- Card stack -->
         <img *ngFor="let card of [0,1,2,3]; let i = index;" [ngStyle]="{'right.px': i * 5}"
@@ -21,8 +21,12 @@
     </div>
 </div>
 
+<div *ngIf="gameOver" class="gameOver"><img src="./assets/img/game-over.jpg" alt="" srcset=""></div>
+
 <app-game-info [card]="game.currentCard" class="card-bottom"></app-game-info>
 
 <button mat-fab color="primary" (click)="openDialog()" class="btn-add">
     <mat-icon>add</mat-icon>
 </button>
+
+
