--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,13 +1,13 @@
-<app-player *ngFor="let player of game.players; let i = index;" [ngStyle]="{'top.px': 100 + (i * 90)}"
-    [playerActive]="i == game.currentPlayer" [name]="player" class="player-position hide-mobile"></app-player>
+<app-player (click)="editPlayer(i)" *ngFor="let player of game.players; let i = index;" [ngStyle]="{'top.px': 100 + (i * 90)}"
+    [playerActive]="i == game.currentPlayer" [name]="player" [image]="game.player_images[i]" class="player-position hide-mobile"></app-player>
 
 <div class="scroll-container hide-desktop"
 >
-    <app-player-mobile *ngFor="let player of game.players; let i = index;"
-        [playerActive]="i == game.currentPlayer" [name]="player" class="hide-desktop"></app-player-mobile>
+    <app-player-mobile (click)="editPlayer(i)" *ngFor="let player of game.players; let i = index;"
+        [playerActive]="i == game.currentPlayer" [name]="player" [image]="game.player_images[i]" class="hide-desktop"></app-player-mobile>
 </div>
 
-<div *ngIf="!gameOver" class="field" style="background-image: url('./assets/img/board.jpg');">
+<div *ngIf="!gameOver" class="field" style="background-image: url('./assets/img/background.jpg');">
     <div class="card-stack">
         <!-- Card stack -->
         <img *ngFor="let card of [0,1,2,3]; let i = index;" [ngStyle]="{'right.px': i * 5}"
