--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,10 +1,11 @@
-<app-player (click)="editPlayer(i)" *ngFor="let player of game.players; let i = index;" [ngStyle]="{'top.px': 100 + (i * 90)}"
-    [playerActive]="i == game.currentPlayer" [name]="player" [image]="game.player_images[i]" class="player-position hide-mobile"></app-player>
+<app-player (click)="editPlayer(i)" *ngFor="let player of game.players; let i = index;"
+    [ngStyle]="{'top.px': 50 + (i * 80)}" [playerActive]="i == game.currentPlayer" [name]="player"
+    [image]="game.player_images[i]" class="player-position hide-mobile"></app-player>
 
-<div class="scroll-container hide-desktop"
->
+<div class="scroll-container hide-desktop">
     <app-player-mobile (click)="editPlayer(i)" *ngFor="let player of game.players; let i = index;"
-        [playerActive]="i == game.currentPlayer" [name]="player" [image]="game.player_images[i]" class="hide-desktop"></app-player-mobile>
+        [playerActive]="i == game.currentPlayer" [name]="player" [image]="game.player_images[i]"
+        class="hide-desktop"></app-player-mobile>
 </div>
 
 <div *ngIf="!gameOver" class="field" style="background-image: url('./assets/img/background.jpg');">
@@ -15,6 +16,7 @@
         <img (click)="takeCard()" class="top-card" style="right: 25px" src="assets/img/cards/card_cover.png">
         <!-- Stack for played cards -->
         <img *ngFor="let card of game.playedCards" class="played-card" src="assets/img/cards/{{ card }}.png">
+
         <!-- Current card (animation) -->
         <img (click)="takeCard()" *ngIf="game.pickCardAnimation" class="pick-card" style="right: 25px"
             src="assets/img/cards/{{ game.currentCard }}.png">
@@ -23,10 +25,25 @@
 
 <div *ngIf="gameOver" class="gameOver"><img src="./assets/img/game-over.jpg" alt="" srcset=""></div>
 
-<app-game-info [card]="game.currentCard" class="card-bottom"></app-game-info>
 
-<button mat-fab color="primary" (click)="openDialog()" class="btn-add">
+<button mat-mini-fab color="disabled" (click)="leaveGame()" class="btn-leave">
+    <mat-icon>home</mat-icon>
+</button>
+<button mat-mini-fab color="disabled" (click)="shareGame()" class="btn-share">
+    <mat-icon>share</mat-icon>
+</button>
+<button mat-fab color="accent" (click)="openDialog()" class="btn-add">
     <mat-icon>add</mat-icon>
 </button>
 
+<img class="preloadImage" src="assets/img/cards/{{ game.stack[game.stack.length - 1] }}.png">
 
+<!-- Text area at bottom -->
+<div *ngIf="gamePlayable">
+<app-game-info [card]="game.currentCard" class="card-bottom"></app-game-info></div>
+
+    <mat-card *ngIf="!gamePlayable" class="card-bottom">
+        <mat-card-title style="padding: 8px 16px">Please create a player to <span *ngIf="game.playedCards.length === 0;">start</span><span *ngIf="game.playedCards.length > 0;">continue</span></mat-card-title>
+    
+        <mat-card-content>Please create add least one player by clicking the "+" button</mat-card-content>
+    </mat-card>
