--- a/src/app/player-mobile/player-mobile.component.scss
+++ b/src/app/player-mobile/player-mobile.component.scss
@@ -1,5 +1,7 @@
 .player {
+  overflow: hidden;
   width: 85px;
+  height: 85px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -10,6 +12,7 @@
   span {
     font-size: 14px;
     margin-left: 0px;
+    white-space: nowrap;
   }
 
   img {
