--- a/src/app/player/player.component.scss
+++ b/src/app/player/player.component.scss
@@ -1,5 +1,7 @@
 .player {
+    overflow: hidden;
     width: 300px;
+    height: 70px;
     display: flex;
     align-items: center;
     background-color: lightgray;
@@ -7,9 +9,10 @@
     border-bottom-left-radius: 50px;
 
     span {
-        font-size: 32px;
+        font-size: 24px;
         margin-left: 16px;
-    }
+        white-space: nowrap;
+        }
 
 
 
