--- a/src/app/game-info/game-info.component.html
+++ b/src/app/game-info/game-info.component.html
@@ -1,5 +1,5 @@
 <mat-card>
+    <mat-progress-bar mode="determinate" value="40"></mat-progress-bar>
     <mat-card-title style="padding: 8px 16px">{{ card ? title : 'Please pick a card' }}</mat-card-title>
-
     <mat-card-content>{{ card ? description : 'Please click on the card stack to pick the first card' }}</mat-card-content>
 </mat-card>
