--- a/src/app/player/player.component.scss
+++ b/src/app/player/player.component.scss
@@ -4,7 +4,7 @@
     height: 70px;
     display: flex;
     align-items: center;
-    background-color: lightgray;
+    background-color: #dcdcdc;
     border-top-left-radius: 50px;
     border-bottom-left-radius: 50px;
 
