--- a/src/app/player-mobile/player-mobile.component.scss
+++ b/src/app/player-mobile/player-mobile.component.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: lightgray;
+  background-color: #dcdcdc;
   border-bottom-right-radius: 50px;
   border-bottom-left-radius: 50px;
 
