--- a/src/app/edit-player/edit-player.component.html
+++ b/src/app/edit-player/edit-player.component.html
@@ -1,9 +1,9 @@
-<h1 mat-dialog-title>Edit Player</h1>
+<h1 mat-dialog-title><span translate>Edit Player</span></h1>
 <div class="playerimageselection">
 <img class="profilepicture" [mat-dialog-close]="picture" *ngFor="let picture of allProfilePictures" src="./assets/img/profile/{{ picture }}">
 </div>
 
 <div mat-dialog-actions>
-    <button mat-button (click)="onNoClick()">Close</button>
-    <button mat-button color="warn" [mat-dialog-close]="'DELETE'" cdkFocusInitial>Delete player</button>
+    <button mat-button (click)="onNoClick()"><span translate>Close</span></button>
+    <button mat-button color="warn" [mat-dialog-close]="'DELETE'" cdkFocusInitial><span translate>Delete player</span></button>
 </div>
