--- a/src/app/dialog-exitintent/dialog-exitintent.component.html
+++ b/src/app/dialog-exitintent/dialog-exitintent.component.html
@@ -1,8 +1,8 @@
-<h1 mat-dialog-title>Leave Game?</h1>
+<h1 mat-dialog-title><span translate>Leave Game?</span></h1>
 <div mat-dialog-content>
-  <p>Do you really want to exit this game session? You can only re-enter by knowing the session id.</p>
+  <p><span translate>Do you really want to exit this game session? You can only re-enter by knowing the session id.</span></p>
 </div>
 <div mat-dialog-actions>
-  <button mat-button (click)="onNoClick()">No thanks</button>
-  <button mat-button color="warn" (click)="leaveGame()" cdkFocusInitial>Back to home</button>
+  <button mat-button (click)="onNoClick()"><span translate>No thanks</span></button>
+  <button mat-button color="warn" (click)="leaveGame()" cdkFocusInitial><span translate>Back to home</span></button>
 </div>
