--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -5,7 +5,7 @@
     <button mat-icon-button (click)="openShareDialog()"><mat-icon>share</mat-icon></button>
     <button mat-icon-button [matMenuTriggerFor]="menu" class="menu-position"><mat-icon>more_vert</mat-icon></button>
     <mat-menu #menu="matMenu">
-        <!-- <button mat-menu-item (click)="switchLanguage()"><span translate>Switch language</span></button> -->
+        <button mat-menu-item (click)="switchLanguage()"><span translate>Switch language</span></button>
         <button mat-menu-item (click)="openAboutDialog()"><span translate>About this game</span></button>
         <button mat-menu-item (click)="openExitDialog()"><span translate>Exit game</span></button>
     </mat-menu>
