--- a/src/app/startscreen/startscreen.component.html
+++ b/src/app/startscreen/startscreen.component.html
@@ -1,7 +1,7 @@
 <div class="start-screen">
     <div class="titlecontainer"><div>RING OF FIRE</div><img src="assets/img/title-cards.png" alt=""></div>
     
-    <!-- <button mat-button color="disabled" (click)="openLoadGameDialog()">LOAD GAME</button> -->
+    <button class="load-btn" (click)="openLoadGameDialog()">LOAD GAME</button>
     <button (click)="newGame()">NEW GAME</button>
 
 </div>
